top bnner adding

--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <titl> Shaykot-Portfolio</titl></title>
-    <link rel="stylesheet" href="style.css">
+    <titl>  </titl></title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+          
+
+            <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        <h1>Welcome to My Portfolio Website</h1>
+      <section class="top-banner">
+        <div class="half-width">
+            <h1 class="front-first">Welcome To</h1>
+           <h1 class="front-first"> <span class="orange-color">Shaykot Hossain Selim</span> World</h1>
+           <h2 class="front-second">Build Climber and Train Stopper</h2>
+           <p class="front-third">You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+            <a class="link-button" target="-blank" href="https://www.facebook.com/md.shaykot.336/">Hire Me</a>
+
+        </div>
+        <div class="half-width">
+            <img src="images/shaykot 1.png" alt="">
+        </div>
+
+        </section>
     
 </body>
 </html>
