--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@
         </div>
 
         </section>
+        <section class="dream-big">
+            <div class="half-width">
+                <img src="images/shaykot 2.png" alt="">
+            </div>
+            <div class="half-width">
+                <h1 class="front-first"> Dream Big</h1>
+                <h2 class="front-second">Become a Web Developer</h2>
+                <p class="front-third">I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+
+                <a class="link-button" target="-blank" href="https://www.facebook.com/md.shaykot.336/">Downlode Resume</a>
+
+            </div>
+
+        </section>
     
 </body>
 </html>
