--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <link rel="stylesheet" href="style.css">
 </head>
 <body>
-      <section class="top-banner">
+      <section class="top-banner flexible-continer">
         <div class="half-width">
             <h1 class="front-first">Welcome To</h1>
            <h1 class="front-first"> <span class="orange-color">Shaykot Hossain Selim</span> World</h1>
@@ -27,7 +27,8 @@
         </div>
 
         </section>
-        <section class="dream-big">
+
+        <section class="dream-big flexible-continer">
             <div class="half-width">
                 <img src="images/shaykot 2.png" alt="">
             </div>
@@ -41,6 +42,24 @@
             </div>
 
         </section>
-    
+
+        <section class="experience-area">
+            <h1 class="front-third">Experinces</h1>
+
+          <div class="flexible-continer">
+            <div id="full-stack-developer" class="experince-item">
+                <h2 class="front-first ">Full Satck Developer</h2>
+                <h3 class="front-second orange-color">2021-Present | Pro Level Developer</h3>
+                <p class="front-third">I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="web-dev-expreience" class="experince-item">
+              <h2 class="front-first ">Junior Web Developer</h2>
+              <h3 class="front-second orange-color">2020-2021 | Programming Hero Learner</h3>
+              <p class="front-third">They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+          </div>
+
+        </section>
+        <footer><p>© Peter Parker 2021, a Programming Hero initiative.</p></footer>
 </body>
 </html>
