somting change in footer

--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
           </div>
 
         </section>
-        <footer><p>© Peter Parker 2021, a Programming Hero initiative.</p></footer>
+        <footer><p style="text-align: center;">© Peter Parker 2021, a Programming Hero initiative.</p></footer>
 </body>
 </html>
